# image-upscale

./: .gitignore  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  upscale-selected.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
image_upscale/: main.py
image_upscale/_vendor/: __init__.py  arch_util.py  registry.py  rrdbnet_arch.py  srvgg_arch.py  upsampler.py
