[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-upscale"
version = "1.0.0"
description = "Easy CLI image upscaler powered by Real-ESRGAN and BasicSR"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/ChrisTitusTech/image-upscale"
"Bug Tracker" = "https://github.com/ChrisTitusTech/image-upscale/issues"

[project.scripts]
upscale = "image_upscale.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["image_upscale*"]
